# roe

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  install.sh  v1-plan.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ARCHITECTURE.md  CONFIG.md  DECISIONS.md  INTERFACES.md  JSON_SCHEMA.md  LICENSING.md  roe.1
fuzz/: binary_loader_fuzzer.cpp  elf_parser_fuzzer.cpp  generate_corpus.sh  macho_parser_fuzzer.cpp  pe_parser_fuzzer.cpp
fuzz/corpus/elf_parser/: not_elf.txt
fuzz/corpus/macho/: regression-extract-strings-overflow
fuzz/corpus/pe/: regression-export-name-budget
include/roe/: archive.hpp  binary.hpp  cli.hpp  core.hpp  debug.hpp  disasm.hpp  elf.hpp  features.hpp  format.hpp  macho.hpp  pe.hpp  resolver.hpp  version.hpp  watcher.hpp
packaging/alpine/: APKBUILD
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/homebrew/: roe.rb
packaging/nix/: default.nix
packaging/rpm/: roe.spec
packaging/scoop/: roe.json
scripts/: check-readme.sh  ci.sh  coverage.sh  fuzz.sh  gen-fixtures.sh  test-arch.sh
src/: main.cpp
src/binary/: binary.cpp
src/cli/: cli.cpp
src/debug/: debug.cpp
src/disasm/: disasm.cpp
src/elf/: elf.cpp
src/features/: config.cpp  features.cpp  pager.cpp
src/format/: format.cpp
src/macho/: macho.cpp
src/pe/: pe.cpp
src/resolver/: resolver.cpp
src/watcher/: watcher.cpp
tests/: test_support.hpp
tests/fixtures/: branch_calls.c  branchy.c  call_targets.c  cpp_symbols.cc  macho_sample.c  pe_dll.c  relocations.c  sample.c  v1.c  v2.c  with_strings.c
tests/integration/: test_cli_crossarch.cpp  test_cli_fixtures.cpp  test_cli_system_binaries.cpp  test_cli_watch_pager.cpp
tests/unit/: test_binary_model.cpp  test_cli_actions.cpp  test_cli_behavior.cpp  test_config_loader.cpp  test_core_result.cpp  test_debug_source.cpp  test_demangle.cpp  test_disasm_core.cpp  test_disasm_elf.cpp  test_disasm_multiarch.cpp  test_elf_errors.cpp  test_elf_parser.cpp  test_features_analysis.cpp  test_features_extra.cpp  test_format_extra.cpp  test_format_rendering.cpp  test_macho_parser.cpp  test_pager_output.cpp  test_pe_parser.cpp  test_resolver_lookup.cpp  test_security_elf_parser.cpp  test_watcher.cpp
